--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,22 @@
   <title>Ojalabook</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
+  <%= csrf_meta_tags %>	
 </head>
 <body>
 
-<%= yield %>
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container">
+			<a href="#" class="navbar-brand">Ojalabook</a>
+			<ul class="nav navbar-nav">
+        		<li class="active"><%= link_to "Status", statuses_path %></li>
+        	</ul>
+		</div>
+	</div>
 
+	<div class="container">
+		<%= yield %>
+	</div>
+		
 </body>
 </html>
