--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,15 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+<div><%= f.label :primer_nombre %><br />
+  <%= f.text_field :primer_nombre %></div>
+
+<div><%= f.label :primer_apellido %><br />
+  <%= f.text_field :primer_apellido %></div>
+
+    <div><%= f.label :nombre_perfil %><br />
+  <%= f.text_field :nombre_perfil %></div>
+
   <div><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
 
