--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -6,8 +6,8 @@
 
 <% @statuses.each do |status|%>
 
-  <div class="status"> 
-    <strong><%= status.nombre %></strong>
+  <div class="status">
+  <strong><%= status.user.nombre_completo %></strong> 
     <p><%= status.contenido%></p>
     <div>
       <%= link_to "Hace "+ time_ago_in_words(status.created_at), status %>
